cpp/common/test/deviations/invalid_deviations/InvalidDeviationRecords.qlref
codingstandards/cpp/deviations/InvalidDeviationRecords.ql